--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
         <div class="text-center row m-1 p-1">
             <div id="blah" class="col-3">
                 <h1 class="display-4 bg-secondary">Online Book Store</h1>
+                <vc:navigation-menu />
                 <br />
             </div>
             <div class="col-9 p-2">
