--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using OnlineBooks
 @using OnlineBooks.Models
 @using OnlineBookStore.Models.ViewModels
+@using OnlineBookStore.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, OnlineBookStore
+
