--- a/Views/Shared/ProjectSummary.cshtml
+++ b/Views/Shared/ProjectSummary.cshtml
@@ -1,13 +1,26 @@
 ﻿@model Books
+    <div>
+        <div class="text-center $font-family-monospace bg-secondary m-1 p-1">
+            <h4>Title: @Model.Title</h4>
+            <p>Author: @Model.FirstName</p>
+            <p>Author: @Model.LastName</p>
+            <p>Publisher: @Model.Publisher</p>
+            <p>ISBN: @Model.ISBN</p>
+            <p>Category: @Model.Category</p>
+            <p>Genre: @Model.Genre</p>
+            <p>Price: @Model.Price</p>
+            <p>Page Number: @Model.PageNumber</p>
+        </div>
 
-<div class="text-center $font-family-monospace bg-secondary m-1 p-1">
-    <h4>Title: @Model.Title</h4>
-    <p>Author: @Model.FirstName</p>
-    <p>Author: @Model.LastName</p>
-    <p>Publisher: @Model.Publisher</p>
-    <p>ISBN: @Model.ISBN</p>
-    <p>Category: @Model.Category</p>
-    <p>Genre: @Model.Genre</p>
-    <p>Price: @Model.Price</p>
-    <p>Page Number: @Model.PageNumber</p>
-</div>
+        <form id="@Model.BookId" asp-page="/Donate" method="post">
+            <input type="hidden" asp-for="BookId" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <span class="card-text p-1">
+                @Model.Title
+                @*This is the donate button and the styling that affects it!*@
+                <button type="submit" class="btn-success btn-sm pull-right" style="float:right">
+                    Donate
+                </button>
+            </span>
+        </form>
+    </div>
