--- a/Pages/Donate.cshtml
+++ b/Pages/Donate.cshtml
@@ -28,7 +28,7 @@
                 <td class="text-right">@((line.Quantity * line.Books.Price).ToString("c"))</td>
                 <td class="text-center">
                     <form asp-page-handler="Remove" method="post">
-                        <input type="hidden" name="ProductID"
+                        <input type="hidden" name="BookId"
                                value="@line.Books.BookId" />
                         <input type="hidden" name="returnUrl"
                                value="@Model.ReturnUrl" />
